<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/new_ad_item" />

    <EditText
        android:id="@+id/itemEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_title"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:maxLines="2"/>
    <EditText
        android:id="@+id/locationET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"/>


</LinearLayout>